<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_radio">

    <fragment
        android:id="@+id/navigation_radio"
        android:name="com.vik3.ui.dashboard.RadioFragmentNew"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_radio" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vik3.ui.home.HomeFragment"
        android:label="@string/title_radio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.vik3.ui.notifications.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>