<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SubscribeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="2dp"
            app:elevation="2dp">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:contentDescription="@string/app_images" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/subscribe"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_images" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stay_with_us"
            android:layout_marginTop="52dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/subscribe_to_get_updates_about_vik3"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="32dp"
            android:inputType="textPersonName"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:inputType="textPersonName"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="32dp"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/pink_500"
            android:textAllCaps="false"
            app:cornerRadius="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>