<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorHome"
    tools:context=".ui.dashboard.RadioFragmentNew">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:background="@drawable/img_bg_new">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        app:strokeColor="@color/white"
                        app:strokeWidth="3dp">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/img_vik" />
                    </com.google.android.material.card.MaterialCardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingBottom="14dp">

                        <TextView
                            android:id="@+id/textViewName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_semibold"
                            android:maxLines="3"
                            android:scrollIndicators="end"
                            android:scrollbars = "vertical"
                            android:text=""
                            android:textColor="@color/whiteFixed"
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/textViewSinger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/josefin_sans_semibold"
                            android:maxLines="2"
                            android:text=""
                            android:textColor="@color/whiteFixed"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSleep"
                    android:layout_width="100dp"
                    android:layout_height="44dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/josefin_sans_semibold"
                    android:text="@string/sleep"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    app:backgroundTint="@color/ColorButtonBackground"
                    app:cornerRadius="32dp"
                    app:icon="@drawable/ic_baseline_access_time_24"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconSize="21dp"
                    app:iconTint="@color/colorButtonTint" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonShare"
                    android:layout_width="100dp"
                    android:layout_height="44dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/josefin_sans_semibold"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    app:backgroundTint="@color/ColorButtonBackground"
                    app:cornerRadius="32dp"
                    app:icon="@drawable/ic_outline_share_24"
                    app:iconGravity="textStart"
                    app:iconSize="19dp"
                    app:iconTint="@color/colorButtonTint" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-36dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    app:cardCornerRadius="360dp">

                    <ImageView
                        android:id="@+id/button"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/app_images"
                        android:scaleType="fitXY"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/img_play" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageBg"
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_images"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_button_bg" />

                <com.example.jean.jcplayer.view.JcPlayerView
                    android:id="@+id/jcplayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-30dp"
                    android:alpha="0"
                    android:visibility="gone"
                    app:next_icon_color="@color/colorTransparent"
                    app:seek_bar_color="@color/colorTransparent" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLastPlayedSong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/josefin_sans_semibold"
                    android:text="@string/last_song_played"
                    android:textColor="@color/colorTextDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_song_list" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>